pkg/lang/testdata/ub/manifest/invalid/requires-non-string.ub
requires: { 'github.com/x/y': 1 }
